# Differential-Model-Alignment

./: DiffGuard: A Mechanistic Evaluation of Differential Model Analysis.md  NeuroDiff: A Comprehensive Architectural Framework for Differential Mechanistic Interpretability  PROJECT_SUMMARY.md  QUICKSTART.md  The Model Diffing Ecosystem.md  new_api_key_hackthon.pem  test_neurodiff.py
neurodiff/: README.md  __init__.py  pyproject.toml
neurodiff/analysis/: __init__.py  activation_diff.py  steering.py  weight_diff.py
neurodiff/core/: __init__.py  base.py  config.py  model_loader.py
neurodiff/examples/: __init__.py  activation_analysis_example.py  weight_analysis_example.py
